<resources>
    <string name="app_name">Depression Test</string>
    <string name="in_the_last_2_weeks">In the last two weeks how do you feel…</string>
    <string name="choice1">choice 1</string>
    <string name="choice2">choice 2</string>
    <string name="choice3">choice 3</string>
    <string name="choice4">choice 4</string>
    <string name="start_test">Start Test</string>
    <string name="history">History</string>
</resources>