<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DepressionTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_the_last_2_weeks"
            android:textColor="@android:color/black"
            android:layout_marginHorizontal="@dimen/size_16"
            android:layout_marginTop="@dimen/size_25"
            android:textSize="@dimen/font_25"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice1"
            android:layout_marginHorizontal="@dimen/size_16"
            android:layout_marginTop="@dimen/size_16"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice2"
            android:layout_marginHorizontal="@dimen/size_16"
            android:layout_marginTop="@dimen/size_10"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice3"
            android:layout_marginHorizontal="@dimen/size_16"
            android:layout_marginTop="@dimen/size_10"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice4"
            android:layout_marginHorizontal="@dimen/size_16"
            android:layout_marginTop="@dimen/size_10"/>

    </LinearLayout>

</ScrollView>