<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_40"
        android:fontFamily="@font/tahu"
        android:layout_marginBottom="@dimen/size_30"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/size_170"
        android:background="@drawable/bg_button_start"
        android:textColor="@color/white"
        android:padding="@dimen/size_20"
        android:text="@string/start_test"
        android:fontFamily="@font/gt_walsheim_medium"
        android:textSize="@dimen/font_16"/>

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/size_170"
        android:background="@drawable/bg_button3_design"
        android:textColor="@color/white"
        android:padding="@dimen/size_20"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/history"
        android:fontFamily="@font/gt_walsheim_medium"
        android:textSize="@dimen/font_16"/>

</LinearLayout>